CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(bluemaster)

INCLUDE(FindPkgConfig)
INCLUDE_DIRECTORIES(include)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_DEFINITIONS(-DBLUEZ_DIR="${BLUEZ_DIR}")

FILE(GLOB SRCS *.c)

pkg_check_modules(pkgs REQUIRED glib-2.0)

INCLUDE_DIRECTORIES(${pkgs_INCLUDE_DIRS})
LINK_DIRECTORIES(${pkgs_LIBRARY_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LIBRARIES} pthread)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_DIR})
